@@ -8,9 +8,10 @@
   license:
     identifier: LGPL-2.1
     uri: http://www.horde.org/licenses/lgpl21
-  notes: |+
+  notes: |
+    ./
+    [mjr] Fix retrying FETCH after an UNKNOWN-CTE error in certain cases (PR #1, stefanolaf).
     [mjr] Fix fatal error in dealing with certain exceptions.
-    
 2.29.15:
   api: 2.29.0
   state:
